# mcsr-analytics

./: .editorconfig  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  RecordsTable.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  main.rs  speedrunigt.rs
src/Modules/: CheckUpdates.tsx  ContextMenu.tsx
src/Pages/: PageLayout.tsx  RecordsTable.tsx  router.ts
