[package]
name = "mcsr-analytics"
version = "0.2.0"
description = "Minecraft Speedrunning Analytics"
authors = ["picovirus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [ "codegen"] }

[dependencies]
log = "^0.4"
dirs = "5.0.1"
glob = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "2.0.0-beta", features = [] }
tauri-plugin = "2.0.0-beta"
tauri-plugin-cli = "2.0.0-beta"
tauri-plugin-log = { version = "2.0.0-beta", features = ["colored"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
windows-sys = "0.52.0"
thiserror = "1.0.57"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
